--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div class="row">
+        <div class="menu">
         <h1>Our Menu</h1></div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12" id="chicken">
