Adding updated html

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12" id="chicken">
                     <div class="top-right">Chicken</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tempor justo a dui tempor, at mattis mi hendrerit. Aenean eget enim felis. Duis euismod auctor aliquet. Morbi aliquet, nulla eu vehicula sollicitudin, mi quam rutrum eros, sed lacinia eros elit et orci. Nam fermentum neque in rhoncus pretium. Pellentesque scelerisque sed odio sed feugiat. Sed congue quis purus aliquet ultrices. Phasellus in rhoncus dolor, sit amet faucibus neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras turpis diam, laoreet ac euismod vel, sagittis sit amet eros. </p>
+                    <p>Lorem ipsum dolor s1t amet, consectetur adipiscing elit. Nunc tempor justo a dui tempor, at mattis mi hendrerit. Aenean eget enim felis. Duis euismod auctor aliquet. Morbi aliquet, nulla eu vehicula sollicitudin, mi quam rutrum eros, sed lacinia eros elit et orci. Nam fermentum neque in rhoncus pretium. Pellentesque scelerisque sed odio sed feugiat. Sed congue quis purus aliquet ultrices. Phasellus in rhoncus dolor, sit amet faucibus neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras turpis diam, laoreet ac euismod vel, sagittis sit amet eros. </p>
                 </div>
 
                     
